containers/proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: web_tls
          stat_prefix: https_passthrough
  - name: listener_1
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          upgrade_configs:
          - upgrade_type: websocket
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/ws" }
                route: { cluster: game_ws, prefix_rewrite: "/" }    
              - match: { prefix: "/Mulplay.GameService" }
                route:
                  cluster: game
                  timeout: 0s
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match: { prefix: "/" }
                route:
                  cluster: web
                  timeout: 0s
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: web
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cluster_web
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: frakas-web
                port_value: 80
  - name: web_tls
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cluster_web_tls
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: frakas-web
                port_value: 443
  - name: game_ws
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
    load_assignment:
      cluster_name: cluster_game
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: frakas-dojo
                    port_value: 8080
  - name: game
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
    load_assignment:
      cluster_name: cluster_game
      endpoints:
        - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: frakas-dojo
                    port_value: 8081
